add: cheat func, UI popup

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
     <div class="container">
-    <!-- // Button vote 5 stars -->
-    <div id="vote-stars">
-        <button class="btn-vote">Click to vote 5 stars!</button>
-    </div>
+        <h1 class="header">FPTU Toolkit</h1>
+        <div class="function">
+            <div id="vote-stars">
+                <h3>Vote 5 star edunext</h3>
+                <button class="btn btn-vote">Vote</button>
+            </div>
+            <div class="cheat">
+                <h3 class="title">Cheat (Quizizz, Blooket)</h3>
+                <div class="cheat-func">
+                    <input class="pin" type="text" placeholder="Enter PIN Game">
+                    <select name="type" id="type">
+                        <option value="quizizz">Quizizz</option>
+                        <option value="blooket">Blooket</option>
+                    </select>
+                    <button class="btn btn-cheat">Start</button>
+                </div>
+            </div>
+            <div class="infor">
+                <h3 class="title">Functions</h3>
+                <div class="infor-func">
+                    <div class="infor-func-item">
+                        <h4>Auto login FAP</h4>
+                    </div>
+                    <div class="infor-func-item">
+                        <h4>Vote 5 star edunext</h4>
+                    </div>
+                    <div class="infor-func-item">
+                        <h4>Cheat (Quizizz, Blooket)</h4>
+                    </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Developed by <a href="https://www.facebook.com/khuyentv183/">TVKL - JS Club</a></p>
+        </div>
     </div>
 </body>
 <script src="popup.js"></script>
+
 </html>
