add: block using facebook

--- a/popup.html
+++ b/popup.html
@@ -12,10 +12,20 @@
     <div class="container">
         <h1 class="header">FPTU Toolkit</h1>
         <div class="function">
+
+            <div class="fb-block">
+                <h3>Stop using Facebook</h3>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+            </div>
+
             <div id="vote-stars">
                 <h3>Vote 5 star edunext</h3>
                 <button class="btn btn-vote">Vote</button>
             </div>
+            
             <div class="cheat">
                 <h3 class="title">Cheat (Quizizz, Blooket)</h3>
                 <div class="cheat-func">
@@ -27,6 +37,7 @@
                     <button class="btn btn-cheat">Start</button>
                 </div>
             </div>
+
             <div class="infor">
                 <h3 class="title">Functions</h3>
                 <div class="infor-func">
@@ -40,6 +51,7 @@
                         <h4>Cheat (Quizizz, Blooket)</h4>
                     </div>
             </div>
+
         </div>
         <div class="footer">
             <p>Developed by <a href="https://www.facebook.com/khuyentv183/">TVKL - JS Club</a></p>
