update: facebook block handle, add icons

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
             <div class="fb-block">
                 <h3>Stop using Facebook</h3>
                 <label class="switch">
-                    <input type="checkbox">
+                    <input class="input-checkbox-block" type="checkbox">
                     <span class="slider round"></span>
                   </label>
             </div>
@@ -49,6 +49,9 @@
                     </div>
                     <div class="infor-func-item">
                         <h4>Cheat (Quizizz, Blooket)</h4>
+                    </div>
+                    <div class="infor-func-item">
+                        <h4>Block Facebook, Youtube</h4>
                     </div>
             </div>
 
