--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,10 @@
                         <h4>Auto login FAP</h4>
                     </div>
                     <div class="infor-func-item">
-                        <h4>Vote 5 star edunext</h4>
+                        <h4>Calculate average point in FAP</h4>
+                    </div>
+                    <div class="infor-func-item">
+                        <h4>Vote 5 stars edunext</h4>
                     </div>
                     <div class="infor-func-item">
                         <h4>Cheat (Quizizz, Blooket)</h4>
