add: calculate point in FAP

--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,8 @@
                     </select>
                     <button class="btn btn-cheat">Start</button>
                 </div>
+                <div class="success ">Successfully!</div>
+                <div class="fail ">Failure!</div>
             </div>
 
             <div class="infor">
