add: coursera pointer

--- a/popup.html
+++ b/popup.html
@@ -18,14 +18,19 @@
                 <label class="switch">
                     <input class="input-checkbox-block" type="checkbox">
                     <span class="slider round"></span>
-                  </label>
+                </label>
             </div>
 
             <div id="vote-stars">
                 <h3>Vote 5 star edunext</h3>
                 <button class="btn btn-vote">Vote</button>
             </div>
-            
+
+            <div id="vote-stars">
+                <h3>Point Coursera</h3>
+                <button class="btn btn-point">Point</button>
+            </div>
+
             <div class="cheat">
                 <h3 class="title">Cheat (Quizizz, Blooket)</h3>
                 <div class="cheat-func">
@@ -58,13 +63,13 @@
                     <div class="infor-func-item">
                         <h4>Block Facebook, Youtube</h4>
                     </div>
-            </div>
+                </div>
 
+            </div>
+            <div class="footer">
+                <p>Developed by <a href="https://www.facebook.com/khuyentv183/">TVKL - JS Club</a></p>
+            </div>
         </div>
-        <div class="footer">
-            <p>Developed by <a href="https://www.facebook.com/khuyentv183/">TVKL - JS Club</a></p>
-        </div>
-    </div>
 </body>
 <script src="popup.js"></script>
 
